fix swirl overflow

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -8,6 +8,7 @@
     width: 100%;
 }
 .home-first-frame {
+    overflow: hidden;
     height: 600px;
 }
 .contact-first-frame {
